--- a/.github/workflows/discovery-scheduler.yml
+++ b/.github/workflows/discovery-scheduler.yml
@@ -6,6 +6,10 @@ on:
     - cron: '0 1 * * *'
   workflow_dispatch: # Allow manual trigger
 
+permissions:
+  contents: write
+  actions: read
+
 jobs:
   discovery:
     runs-on: ubuntu-latest
@@ -38,4 +42,6 @@ jobs:
         git config --local user.name "GitHub Action"
         git add data/db.json
         git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update: Discovered new AI models [skip ci]"
-        git push
+        git push origin main
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
