--- a/.github/workflows/simple-deploy.yml
+++ b/.github/workflows/simple-deploy.yml
@@ -1,9 +1,7 @@
-name: Deploy to GitHub Pages
+name: Simple Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
 permissions:
@@ -28,18 +26,20 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Seed database
-      run: npm run seed-comprehensive
-      
     - name: Build static files
       run: |
         mkdir -p dist
         cp public/static.html dist/index.html
         cp data/db.json dist/
         
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+      
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
+        path: './dist'
+        
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
