--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,4 +1,4 @@
-name: Simple Deploy to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -10,11 +10,11 @@ permissions:
   id-token: write
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
+    - name: Checkout
       uses: actions/checkout@v4
       
     - name: Setup Node.js
@@ -31,6 +31,7 @@ jobs:
         mkdir -p dist
         cp public/static.html dist/index.html
         cp data/db.json dist/
+        cp index.html dist/landing.html
         
     - name: Setup Pages
       uses: actions/configure-pages@v4
